<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mushaf Muslim</string>

    <string name="text_all_right_reserved">Ahlan Wa Sahlan</string>
    <string name="selamat_datang">Selamat Daang</string>

    <!--  id admob  -->
    <string name="idAdmob">ca-app-pub-1776006511024568~4988030819</string>
    <string name="idInterstisialSplash">ca-app-pub-1776006511024568/1193303185</string>
    <string name="idBannerShirah">ca-app-pub-1776006511024568/6254058174</string>
    <string name="idBannerAccount">ca-app-pub-1776006511024568/8688649821</string>

<!--    <string name="idAdmobTesting">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="idInterstisialTesting">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="idBannerTesting1">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="idBannerTesting2">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="login">Masuk</string>
    <string name="lanjut">Lanjut</string>
    <string name="sign_up">Daftar</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="text_atau">Atau</string>
    <string name="sign_up_dengan_jejaring_sosial">Daftar dengan jejaring sosial</string>
    <string name="full_name">Nama lengkap tanpa gelar</string>
    <string name="email">Email</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_code">Masukkan Kode Verifikasi</string>
    <string name="username">Username</string>

    <string name="silahkan_pilih_jenis_akun_yang_akan_anda_buat">Silahkan pilih jenis akun yang akan Anda Buat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="keluar">Keluar</string>
    <string name="mohon_tunggu">Mohon Tunggu…</string>
    <string name="lewati">Lewati</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="action_chat">Chat</string>
    <string name="action_notif">Notifikasi</string>
    <string name="action_add">Tambah</string>
    <string name="action_share">Bagikan</string>

    <string name="menu_profile">Profil Saya</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_pesan">Pesan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="pengaturan_privasi">Pengaturan Privasi</string>
    <string name="sign_out">Keluar</string>
    <string name="nama">Nama Lengkap</string>
    <string name="noHandphone">No. Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="update">Simpan</string>
    <string name="gelar">Gelar</string>
    <string name="provinsi">Provinsi</string>
    <string name="strata_1_sarjana">Strata 1 (Sarjana)</string>
    <string name="nama_perguruan_tinggi">Nama perguruan tinggi</string>
    <string name="strata_2_magister">Strata 2 (Magister)</string>
    <string name="strata_3_doktor">Strata 3 (Doktor)</string>
    <string name="kota_perguruan_tinggi">Kota perguruan tinggi</string>
    <string name="tahun_tamat">Tahun tamat</string>
    <string name="jurusan_program_studi">Jurusan / program studi</string>
    <string name="gelar_akademik">Gelar Akademik</string>
    <string name="beranda">Beranda</string>
    <string name="privasi">Privasi</string>
    <string name="tambah_jenis_akun">Tambah Jenis Akun</string>
    <string name="hapus_jenis_akun">Nonaktifkan Akun</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="tampilkan_alamat_saya">Tampilkan Alamat Saya</string>
    <string name="tampilkan_gelar_pendidikan">Tampilkan Gelar Pendidikan</string>
    <string name="tampilkan_lokasi_terkini_saya">Tampilkan Lokasi Saya</string>
    <string name="tampilkan_tempat_tanggal_lahir">Tampilkan tempat tanggal lahir</string>
    <string name="kecamatan">Kecamatan,</string>
    <string name="kabupaten_kota">Kabupaten / Kota,</string>
    <string name="input_text">Input Text</string>
    <string name="tambah">Tambah</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="alamat">Alamat</string>
    <string name="pick_alamt_kantor_di_map">Pick alamat kantor di map</string>
    <string name="alamat_rumah_jalan_perumahan_block_no">Alamat Rumah (Jalan, Perumahan, Block, No)</string>
    <string name="reset">Reset</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_alamat">Pick Alamat</string>
    <string name="silahkan_pick_alamat_anda">Silahkan pick alamat anda</string>

    <string name="tolak">TOLAK</string>
    <string name="terima">TERIMA</string>
    <string name="username_atau_no_handphone">Username atau No. Handphone</string>
    <string name="lokasi">Lokasi</string>
    <string name="navigasi">Navigasi</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="kecamatan_dan_kota">Kecamatan dan Kota</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="nomor_handphone_aktif">Nomor handphone aktif</string>
    <string name="cari">Cari</string>
    <string name="status">Status</string>
    <string name="belum">Belum</string>
    <string name="ya">Ya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ketikkan_pesan">Ketikkan pesan</string>
    <string name="message">message</string>
    <string name="anda">Anda</string>
    <string name="foto">Foto</string>
    <string name="admin">Admin</string>
    <string name="undescot">_</string>
    <string name="masukkan_kode">Masukkan kode</string>
    <string name="list_temp_data">List Temp Data</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="register">Register</string>
    <string name="blank_fragment_1">Blank Fragment 1</string>
    <string name="blank_fragment_2">Blank Fragment 2</string>
    <string name="menu_setting">Setting</string>
    <string name="main_activity">Main Activity</string>
    <string name="authentication">Authentication</string>
    <string name="admob">Admob</string>
    <string name="test_admob">Test Admob</string>
    <string name="intersitial_admob">Intersitial Admob</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="click_me">Click Me</string>
    <string name="about_us">About Us</string>
    <string name="rewarded_ads">Rewarded Ads</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="simpan">Simpan</string>
    <string name="nama_lengkap_sesuai_nama_di_rekening_bank">Nama Lengkap (sesuai nama di rekening Bank)</string>
    <string name="all_right_reserved">All Right Reserved | Mushaf Muslim 2021</string>
    <string name="faq">FAQ</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="link_grup">Link Grup Whatsapp</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="berikan_rating">Berikan Rating</string>
    <string name="maaf_belum_ada_data">Maaf, belum ada data</string>
    <string name="perbarui_aplikasi">Perbarui Aplikasi</string>
    <string name="belum_ada_data_video">Belum ada data video</string>
    <string name="shirah_nabawi">Shirah Nabawi</string>
    <string name="username_referal" tools:ignore="Typos">Username Referal</string>
    <string name="poin">Poin</string>
    <string name="harga_poin">Harga Per Poin</string>
    <string name="rupiah">Rupiah</string>
    <string name="titik2">:</string>
    <string name="penarikan">Penarikan</string>
    <string name="rate_us">Rate Us</string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="riwayat">Riwayat</string>
    <string name="judul">Judul</string>
    <string name="main">Main</string>
    <string name="account">Account</string>
    <string name="detail_shirah">Detail Shirah</string>
    <string name="saldo">Saldo</string>
    <string name="referal">Referal</string>
    <string name="double_poin">Double Poin</string>
    <string name="riwayat_penarikan">Riwayat Penarikan</string>
    <string name="wd">WD</string>
    <string name="jumlah_penarikan">Jumlah Penarikan</string>
    <string name="penarikan10">10.000 Ribu</string>
    <string name="penarikan100">100.000 Ribu</string>
    <string name="informasi_penarikan">Informasi Penarikan</string>
</resources>
