<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_home_gray"
            android:title="@string/beranda" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_profile_gray"
            android:title="@string/edit_profil" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq_gray"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_gray"
            android:title="@string/logout" />
    </group>
</menu>
