<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CustomTheme"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/h2"
        app:cardCornerRadius="@dimen/h2"
        app:cardElevation="@dimen/h2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h2">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:text="@string/wd"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:padding="@dimen/h2"
                android:background="@drawable/circle_green"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textJumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_penarikan"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h3"
                android:layout_toEndOf="@+id/textWD"
                android:layout_marginStart="@dimen/h2"
                android:maxLines="2"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="@dimen/text_h2"
                android:layout_below="@+id/textJumlah"
                android:layout_toEndOf="@+id/textWD"
                android:layout_marginTop="@dimen/h1"
                android:layout_marginStart="@dimen/h2"
                android:maxLines="1"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="@dimen/text_h2"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/h2"
                android:maxLines="1"
                tools:ignore="RelativeOverlap"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>