<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/h2"
        android:layout_margin="@dimen/h5"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h3"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informasi_penarikan"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h4"
                android:id="@+id/textAttention"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                />
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/h1"
                android:layout_below="@+id/textAttention"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penarikan10"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_h3"
                android:id="@+id/btnPenarikan10"
                android:fontFamily="@font/roboto_regular"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/listView"
                android:layout_marginStart="@dimen/h5"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penarikan100"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_h3"
                android:id="@+id/btnPenarikan100"
                android:fontFamily="@font/roboto_regular"
                android:layout_toStartOf="@+id/btnPenarikan10"
                android:layout_below="@+id/listView"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>