<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CustomTheme"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/h2"
        app:cardCornerRadius="@dimen/h2"
        app:cardElevation="@dimen/h2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h2">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFoto"
                android:layout_width="@dimen/_100"
                android:layout_height="@dimen/_100"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:background="@drawable/radius_gray"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h5"
                android:layout_toEndOf="@+id/imgFoto"
                android:layout_marginStart="@dimen/h2"
                android:maxLines="2"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/textShirah"
                android:layout_height="wrap_content"
                android:layout_below="@id/textJudul"
                android:text="@string/shirah_nabawi"
                android:textSize="@dimen/text_h3"
                android:layout_toEndOf="@+id/imgFoto"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginStart="@dimen/h2"
                android:maxLines="3"
                android:lines="3"
                android:ellipsize="end"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="@dimen/text_h3"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textShirah"
                android:layout_marginTop="@dimen/h2"
                android:drawableStart="@drawable/ic_time_gray"
                android:drawablePadding="@dimen/h2"
                android:maxLines="1"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>