<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.exomatik.zcodex.ui.main.addNotes.AddNotesFragment">

    <data>
        <variable
            name="viewModel"
            type="com.exomatik.zcodex.ui.main.addNotes.AddNotesViewModel"
            />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        snackbar="@{viewModel.message}"
        android:orientation="vertical"
        android:theme="@style/CustomStyle"
        >
        <include layout="@layout/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            visible="@{viewModel.isShowLoading}"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/customEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/h5"
            android:layout_marginTop="@dimen/h3"
            android:layout_marginRight="@dimen/h5"
            android:hint="@string/title"
            android:textColorHint="@color/gray2"
            android:id="@+id/etTitle"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textStandardWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@={viewModel.title}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNotes"
            style="@style/customEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/h5"
            android:layout_marginTop="@dimen/h3"
            android:layout_marginRight="@dimen/h5"
            android:hint="@string/notes"
            android:textColorHint="@color/gray2"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textStandardWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:gravity="start"
                android:textColor="@color/black"
                android:text="@={viewModel.notes}"
                android:inputType="textMultiLine"
                android:lines="15"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/buttonStandardBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/h5"
            android:layout_marginTop="@dimen/_40"
            android:layout_marginRight="@dimen/h5"
            android:padding="@dimen/h3"
            android:textSize="@dimen/text_h2"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:onClick="@{()-> viewModel.onClickSave()}"
            disableButton="@{viewModel.isShowLoading}"
            android:textAlignment="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>